...
        if (inSelectionMode) {
            if (checked) {
                Icon(
                    painter = painterResource(
                        id = R.drawable.round_check_circle_outline_24
                    ),
                    contentDescription = "Checked circle"
                )
            } else {
                Icon(
                    painter = painterResource(
                        id = R.drawable.round_radio_button_unchecked_24
                    ),
                    contentDescription = "Unchecked circle"
                )
            }
        }
        Column {
            if (index != 0) {
                HorizontalDivider()
...
